# super_package_test

./: CMakeLists.txt
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/dep/: Makefile  cmake_install.cmake  depConfig.cmake  depTargets.cmake
_build/pkg0/: Makefile  cmake_install.cmake  pkg0Config.cmake  pkg0ConfigVersion.cmake  pkg0Targets.cmake
dep/: CMakeLists.txt
dep/cmake/: Config.cmake.in
pkg0/: CMakeLists.txt
pkg0/cmake/: Config.cmake.in
super/: CMakeLists.txt
